--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ json2sql/.DS_Store
 json2sql/__pycache__/
 json2sql/migrations/0001_initial.py
 json2sql/migrations/__pycache__/
-season.json
+season.
+secret.txt
